[package]
name = "kvs"
version = "0.1.0"
authors = ["Nik Bond <nikbond97@gmail.com>"]
edition = "2018"
about = "Key-value storage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
assert_cmd = "0.11.0"
predicates = "1.0.0"
structopt = { version = "0.2.18", features = [ "paw" ] }
paw = "1.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
failure = "0.1.5"
log = "0.4.8"
simplelog = "0.7.4"
